--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Responsive Image Gallery</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <h1 class="title">My Image Gallery</h1>
+  <div class="gallery">
+    <div class="image-container"><img src="https://picsum.photos/400/300?random=1" alt="Gallery Image 1" /></div>
+    <div class="image-container"><img src="https://picsum.photos/400/300?random=2" alt="Gallery Image 2" /></div>
+    <div class="image-container"><img src="https://picsum.photos/400/300?random=3" alt="Gallery Image 3" /></div>
+    <div class="image-container"><img src="https://picsum.photos/400/300?random=4" alt="Gallery Image 4" /></div>
+    <div class="image-container"><img src="https://picsum.photos/400/300?random=5" alt="Gallery Image 5" /></div>
+    <div class="image-container"><img src="https://picsum.photos/400/300?random=6" alt="Gallery Image 6" /></div>
+    <div class="image-container"><img src="https://picsum.photos/400/300?random=7" alt="Gallery Image 7" /></div>
+    <div class="image-container"><img src="https://picsum.photos/400/300?random=8" alt="Gallery Image 8" /></div>
+  </div>
+
+  <!-- Lightbox Modal -->
+  <div id="lightbox" class="lightbox">
+    <span class="close">&times;</span>
+    <img class="lightbox-content" id="lightbox-img" />
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
